Remove gray background on product editor page and fix wrong visible scroll

--- a/plugins/woocommerce-admin/client/products/product-page.scss
+++ b/plugins/woocommerce-admin/client/products/product-page.scss
@@ -29,11 +29,11 @@
 		position: fixed;
 		width: calc(100% - $admin-menu-width);
 		left: $admin-menu-width;
-		@include breakpoint( '<960px' ) {
+		@include breakpoint("<960px") {
 			left: $admin-menu-width-collapsed;
 			width: calc(100% - $admin-menu-width-collapsed);
 		}
-		@include breakpoint( '<782px' ) {
+		@include breakpoint("<782px") {
 			left: 0;
 			width: 100%;
 		}
@@ -49,7 +49,7 @@
 
 	.interface-interface-skeleton__header {
 		top: $adminbar-height;
-		@include breakpoint( '<782px' ) {
+		@include breakpoint("<782px") {
 			top: $adminbar-height-mobile;
 		}
 	}
@@ -62,8 +62,16 @@
 }
 
 html.interface-interface-skeleton__html-container {
-	@include breakpoint( '<782px' ) {
+	@include breakpoint("<782px") {
 		position: inherit;
+	}
+}
+
+body {
+	background-color: #ffffff;
+
+	&.woocommerce-admin-page.woocommerce_page_wc-admin #wpbody-content {
+		min-height: calc(100vh - 96px);
 	}
 }
 
